continiuing to work on mobile responsiveness. i've run into the same issue with bootstrap where the body and margin do respond the way i want to.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,8 @@
 body {
     background-image: url(../images/stripes.png);
     font-family: 'Noto Serif', serif;
-    width: 100%;
+    margin: 0 auto;
+
 }
 
 h1{
@@ -15,11 +16,12 @@ h1{
 }
 
 .container {
+    position: relative;
     background-color: rgb(255, 255, 255);
+    width: 100%;
     padding-top: 20px;
     padding-bottom: 20px;
     margin: 40px;
-    /* box-shadow: 10px rgb(255, 255, 255); */
     box-shadow: 0px 0px 5px 5px rgb(201, 200, 200);
     border: 10px;
 }
